<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joseblandon.punto2.Punto2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operando1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:id="@+id/eOperando1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operando2"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:id="@+id/eOperando2"/>

    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/eOperacion">

        <RadioButton android:id="@+id/rbSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma" />

        <RadioButton android:id="@+id/rbResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta" />

        <RadioButton android:id="@+id/rbMultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"/>

        <RadioButton android:id="@+id/rbDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_gravity="left"
        android:id="@+id/bCalcular"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20dp"
        android:id="@+id/eResultado"/>

</LinearLayout>
